# cdxj-indexer

./: .travis.yml  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yaml
cdx_indexer/: cdx_indexer.py  postquery.py
cdxj_indexer/: __init__.py  amf.py  bufferiter.py  cdxj_indexer.py  main.py  postquery.py
test/: test_indexer.py  test_postappend.py
test/data/: post-test-more.warc
