[project]
name = "cdxj_indexer"
description = "CDXJ Indexer for WARC and ARC files"
readme = "README.rst"
authors = [
    { name = "Ilya Kreymer", email = "ikreymer@gmail.com" }
]
license = { text = "Apache 2.0" }
dynamic = ["version"]
dependencies = [
   'warcio',
   'surt',
   'py3amf',
   'multipart'
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.optional-dependencies]
lint = [
  "black",
]
test = [
  "pytest",
  "pytest-cov",
]
dev = [
  "cdxj_indexer[lint]",
  "cdxj_indexer[test]",
]

[project.scripts]
cdxj-indexer = "cdxj_indexer.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "cdxj_indexer.__version__"}